Closed
Bug 87928
Opened 24 years ago
Closed 21 years ago
Implement sorting in the subscribe dialog for news.
Categories
(SeaMonkey :: MailNews: Message Display, defect)
SeaMonkey
MailNews: Message Display
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: stephend, Assigned: neil)
References
()
Details
(Whiteboard: fixed-aviary1.0)
Attachments
(1 file)
|
2.50 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
Build ID: 2001-06-26, all OSs.
Summary: Implement sorting in the subscribe dialog for news.
Steps to Reproduce:
1. Fire up the subscribe dialog and enter "alt" as a search criteria.
2. Notice the plethora of results.
3. Click on the "Newsgroup Name", "Subscribed/Unsubscribed", or "Messages" header.
Expected Results:
This would sort each of the headers by the following criteria:
for Newsgroup Name:
alphabetically
for "Subscribed/Unsubscribed" (this column heading doesn't have a label) I would
expect this to sort:
the newsgroups which you've subscribed to vs. the newsgroups you haven't
(note, this might be nullified perhaps when we get a tab structure with
"Subscribed")
and lastly, I would expect "Messages" to sort:
the # of messages in each newsgroup, increasingly or decreasingly based on the
sort column's arrow
Actual Results:
Sort isn't implemented currently.
| Reporter | ||
Updated•24 years ago
|
Hardware: PC → All
Comment 1•24 years ago
|
||
finding a newsgroup on newsservers with many newsgroups without sorting is
almost impossible...:(
*** Bug 196261 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 3•21 years ago
|
||
Actually the fix to this bug is just the one line in SetSearchValue but I
thought I'd take the opportunity to fix searching on non-ascii characters.
| Assignee | ||
Updated•21 years ago
|
Assignee: sspitzer → neil.parkwaycc.co.uk
Status: NEW → ASSIGNED
| Assignee | ||
Updated•21 years ago
|
Attachment #149498 -
Flags: superreview?(bienvenu)
Attachment #149498 -
Flags: review?(bienvenu)
Updated•21 years ago
|
Attachment #149498 -
Flags: superreview?(bienvenu)
Attachment #149498 -
Flags: superreview+
Attachment #149498 -
Flags: review?(bienvenu)
Attachment #149498 -
Flags: review+
| Assignee | ||
Comment 4•21 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Whiteboard: fixed-aviary1.0
Comment 5•21 years ago
|
||
I meant this bug to be about the quicksearch view of Subscribe, but as it never
got implemented (we only sort on raw, unsearched views), I'm letting bug 248267
stand for that, and closing this one out.
Verified FIXED with build 2004-07-28-08 on Windows XP.
Status: RESOLVED → VERIFIED
| Assignee | ||
Comment 6•21 years ago
|
||
OK, you've lost me here... what are you looking for?
The quick search view sorts its results alphabetically, no?
Comment 7•21 years ago
|
||
Well, true sorting would sort all of the columns (like the
subscribed/unsubscribed columns) even in quicksearch.
Updated•21 years ago
|
Product: Browser → Seamonkey
Component: MailNews: Subscribe → MailNews: Message Display
QA Contact: stephend → search
You need to log in
before you can comment on or make changes to this bug.
Description
•