Bug 87928 Subscribe quick search should search on unescaped newsgroup names and be sorted r/sr=bienvenu